--- a/src/popup.css
+++ b/src/popup.css
@@ -4,3 +4,34 @@ html, body {
     padding: 0;
     margin: 0;
 }
+
+h1 {
+    text-align: center;
+    margin: 10px 5%;
+}
+
+form {
+    margin: 10px 5%;
+}
+
+form > div {
+    margin: 10px 0;
+    display: flex;
+    height: 1.2rem;
+}
+
+form > div > label {
+    flex: 1 0 0;
+    text-align: right;
+    line-height: 1.2rem;
+    margin-right: 10px;
+}
+
+form > div > :is(input, select) {
+    width: 0;
+    flex: 2 0 0;
+}
+
+form > button {
+    width: 100%;
+}
